# wazemmes

./: Cargo.toml  README.md  config-example.ron  config.ron
src/: cli.rs  drawing.rs  inputs.rs  main.rs  render.rs  state.rs  udev.rs  winit.rs
src/backend/: drawing.rs  libinput.rs  mod.rs
src/backend/drm/: device.rs  gpu.rs  mod.rs  udev.rs
src/backend/winit/: mod.rs
src/backend/xwayland/: client.rs  error.rs  mod.rs  window.rs
src/border/: glow.rs  mod.rs
src/config/: keybinding.rs  mod.rs
src/draw/: mod.rs  pointer.rs
src/handlers/: backend.rs  compositor.rs  dmabuf.rs  mod.rs  output.rs  screencopy.rs  xdg_decoration.rs  xdg_shell.rs
src/inputs/: grabs.rs  handlers.rs  mod.rs
src/protocol/: wlr-screencopy_unstable_v1.xml
src/resources/: pointer.rs
src/shell/: border.rs  container.rs  drawable.rs  mod.rs  node.rs  nodemap.rs  tree.rs  window.rs  workspace.rs
src/shell/windows/: mod.rs  toplevel.rs  xpopup.rs
src/state/: mod.rs  seat.rs
