[package]
name = "wazemmes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay", features = ["backend_winit", "wayland_frontend", "desktop", "slog-stdlog"] }
xkbcommon = "0.4.1"
slog = { version = "2.1.1" }
slog-term = "2.8"
slog-async = "2.2"
slog-stdlog = "4.1.0"
slog-scope = "4.4.0"
slog-envlogger = "2.2.0"
bitflags = "1"
once_cell = "1.13.0"
cgmath = "0.18.0"

[features]
default = [ "egl", "winit" ]
egl = [ "smithay/use_system_lib", "smithay/backend_egl" ]
winit = [ "smithay/backend_winit" ]